--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/main.css">
-    <title>Document</title>
+    <title>Flat Earthers Unite!</title>
 </head>
 
 <body>
-    <article id="container"></article>
+    <main class="container">
+        <nav class="nav"></nav>
+        <aside class="friendsContainer"></aside>
+        <section class="newsContainer"></section>
+        <section class="eventsContainer"></section>
+        <aside class="tasksContainer"></aside>
+    </main>
+    <script src="./scripts/main.js" type="module"></script>
 </body>
 
 </html>
