--- a/src/messages.html
+++ b/src/messages.html
@@ -15,7 +15,7 @@
   <main class="appContainer">
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
-          <a class="btn btn-primary navbar-btn navbar-left" href="index.html" role="button">Dashboard</a>
+          <a class="btn btn-primary navbar-btn navbar-left" href="dashboard.html" role="button">Dashboard</a>
           <button class="button--logOut btn btn-secondary navbar-right btn-light">Log Out</button>
       </div>
     </nav>
