navbar logOut works

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container-fluid">
                 <a class="btn btn-primary navbar-btn navbar-left" href="messages.html" role="button">Messages</a>
-                <button class="button--logOut btn btn-secondary navbar-right btn-light">Log Out</button>
+                <button id ="logOut" class="button--logOut btn btn-secondary navbar-right btn-light">Log Out</button>
             </div>
         </nav>
         <aside class="friendsContainer"></aside>
