refactored message page

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -19,6 +19,8 @@
                 <button class="button--logOut btn btn-secondary navbar-right btn-light">Log Out</button>
             </div>
         </nav>
+        <section class="messagesContainer"></section>
+        <section class="messagesForm"></section>
         <aside class="friendsContainer"></aside>
         <section class="newsContainer"></section>
         <section class="eventsContainer"></section>
