--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,13 @@
                 <button class="button--logOut btn btn-secondary navbar-right btn-light">Log Out</button>
             </div>
         </nav>
-        <section class="logInForm"></section>
-        <aside class="friendsContainer"></aside>
-        <section class="newsContainer"></section>
-        <section class="eventsContainer"></section>
-        <aside class="tasksContainer"></aside>
+        <section class="renderArea">
+            <section class="logInForm"></section>
+            <aside class="friendsContainer"></aside>
+            <section class="newsContainer"></section>
+            <section class="eventsContainer"></section>
+            <aside class="tasksContainer"></aside>
+        </section>
     </main>
     <script src="./scripts/main.js" type="module"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
