--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -21,7 +21,10 @@
         </nav>
         <aside class="friendsContainer"></aside>
         <section class="newsContainer"></section>
-        <section class="eventsContainer"></section>
+        <section class="eventsContainer">
+            <section class="addEventsButton"></section>
+            <section class="eventsRenderArea"></section>
+        </section>
         <aside class="tasksContainer"></aside>
     </main>
     <script src="./scripts/main.js" type="module"></script>
