--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       <section class="logInForm"></section>
     </main>
     <script type="module" src="./scripts/logInMain.js"></script>
+    <script type="module" src="./scripts/main.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
