able to add friend via search

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -19,7 +19,12 @@
                 <button id ="logOut" class="button--logOut btn btn-secondary navbar-right btn-light">Log Out</button>
             </div>
         </nav>
-        <aside class="friendsContainer"></aside>
+        <aside class="friendsContainer">
+            <label for="friendSearch">Add a Friend: </label>
+            <input type="search" placeholder="Search Username" id="friendSearch">
+            <button id="saveFriend" class="btn btn-secondary">Save</button>
+        <section class="friendsCards"></section>
+        </aside>
         <section class="newsContainer"></section>
         <section class="eventsContainer"></section>
         <aside class="tasksContainer"></aside>
