--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -35,6 +35,8 @@
       <aside class="friendsContainer"></aside>
       <section class="newsContainer"></section>
       <section class="eventsContainer"></section>
+      <section class="eventsContainer"></section>
+      <section class="taskForm"></section>
       <aside class="tasksContainer"></aside>
     </main>
     <script src="./scripts/main.js" type="module"></script>
