events list works - still can't edit

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,11 @@
             <section class="logInForm"></section>
             <aside class="friendsContainer"></aside>
             <section class="newsContainer"></section>
-            <section class="eventsContainer"></section>
+            <section class="eventsContainer">
+                <section class="addEventsButton"></section>
+                <section class="eventsRenderArea"></section>
+                <section class="eventsFormArea"></section>
+            </section>
             <aside class="tasksContainer"></aside>
             <section class="messagesContainer"></section>
             <section class="messagesForm"></section>
