news and events list working (no editing)

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,9 @@
             <section class="logInForm"></section>
             <aside class="friendsContainer"></aside>
             <section class="newsContainer"></section>
+                <section class="addNewsButton"></section>
+                <section class="newsRenderArea"></section>
+                <section class="newsFormArea"></section>
             <section class="eventsContainer">
                 <section class="addEventsButton"></section>
                 <section class="eventsRenderArea"></section>
