STYLING AND WYLIN, baby

--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,17 @@
           <section class="newsRenderArea"></section>
           <section class="newsFormArea"></section>
         </section>
+        <div class="lineBreakContainer">
+          <div class="lineBreak lineHolder"></div>
+        </div>
         <section class="eventsContainer">
           <section class="addEventsButton"></section>
           <section class="eventsRenderArea"></section>
           <section class="eventsFormArea"></section>
         </section>
+        <div class="lineBreakContainer">
+          <div class="lineBreak lineHolder"></div>
+        </div>
         <section class="messageContentContainer">
           <section class="messagesContainer"></section>
           <section class="messagesForm"></section>
