--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <main class="container">
     <nav class="navbar navbar-inverse navbar-fixed-top hidden">
       <div class="container-fluid">
+        <h2>You're so much smarter than literally everyone else</h2>
         <button class="button--logOut btn btn-secondary navbar-right btn-light" id="logOut">Log Out</button>
       </div>
     </nav>
