--- a/src/index.html
+++ b/src/index.html
@@ -22,32 +22,33 @@
     <section class="logInForm"></section>
     <section class="renderArea">
       <aside class="friendsContainer">
+        <h3>Friends</h3>
         <section class="friendSearchContainer"></section>
         <section class="friendsCards"></section>
       </aside>
       <section class="mainContentSection">
         <section class="newsContainer">
+          <h3>News</h3>
           <section class="addNewsButton"></section>
           <section class="newsRenderArea"></section>
           <section class="newsFormArea"></section>
         </section>
-        <div class="lineBreakContainer">
-          <div class="lineBreak lineHolder"></div>
-        </div>
+       
         <section class="eventsContainer">
+          <h3>Events</h3>
           <section class="addEventsButton"></section>
           <section class="eventsRenderArea"></section>
           <section class="eventsFormArea"></section>
         </section>
-        <div class="lineBreakContainer">
-          <div class="lineBreak lineHolder"></div>
-        </div>
+        
         <section class="messageContentContainer">
+          <h3>Messages</h3>
           <section class="messagesContainer"></section>
           <section class="messagesForm"></section>
         </section>
       </section>
       <section class="taskContentContainer">
+        <h3>Tasks</h3>
         <section class="taskForm"></section>
         <aside class="tasksContainer"></aside>
       </section>
