--- a/src/index.html
+++ b/src/index.html
@@ -22,33 +22,33 @@
     <section class="logInForm"></section>
     <section class="renderArea">
       <aside class="friendsContainer">
-        <h3>Friends</h3>
+        <h3 class="sectionTitleFriends hidden">Friends</h3>
         <section class="friendSearchContainer"></section>
         <section class="friendsCards"></section>
       </aside>
       <section class="mainContentSection">
         <section class="newsContainer">
-          <h3>News</h3>
+          <h3 class="sectionTitleNews hidden">News</h3>
           <section class="addNewsButton"></section>
           <section class="newsRenderArea"></section>
           <section class="newsFormArea"></section>
         </section>
        
         <section class="eventsContainer">
-          <h3>Events</h3>
+          <h3 class="sectionTitleEvents hidden">Events</h3>
           <section class="addEventsButton"></section>
           <section class="eventsRenderArea"></section>
           <section class="eventsFormArea"></section>
         </section>
         
         <section class="messageContentContainer">
-          <h3>Messages</h3>
+          <h3 class="sectionTitleMessages hidden">Messages</h3>
           <section class="messagesContainer"></section>
           <section class="messagesForm"></section>
         </section>
       </section>
       <section class="taskContentContainer">
-        <h3>Tasks</h3>
+        <h3 class="sectionTitleTasks hidden">Tasks</h3>
         <section class="taskForm"></section>
         <aside class="tasksContainer"></aside>
       </section>
